<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".orderActivity">

    <TextView
        android:id="@+id/Orderedmessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:fontFamily="cursive"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:text="Name" />

        <EditText
            android:id="@+id/editTextname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter your name "
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:text="Address" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:hint="Enter address"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Home"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter phone"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:inputType="number"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:inputType="text" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:text="Note:" />

        <EditText
            android:id="@+id/editTextnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:hint="Enter note"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="283dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Choose a delivery method:"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <RadioButton
                android:id="@+id/sameday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="radioClicked"
                android:text="@string/same_day_messenger_service"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/nextday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="radioClicked"
                android:text="@string/next_day_ground_delivery"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/pickup"
                android:layout_width="278dp"
                android:onClick="radioClicked"
                android:layout_height="29dp"
                android:text="@string/pick_up"
                android:textSize="15sp" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>
